[package]
name = "siena"
description = "A flat-file database and ORM."
repository = "https://github.com/askonomm/siena"
version = "2.0.1"
edition = "2021"
authors = ["Asko Nõmm <asko@asko.dev>"]
license = "MIT"
keywords = ["yaml", "frontmatter", "orm", "database"]
categories = ["database", "filesystem"]

[dependencies]
regex = "1.10.0"
comrak = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde-frontmatter = "0.1.0"