[package]
name = "siena"
description = "Siena is data provider agnostic ORM."
repository = "https://github.com/askonomm/siena"
version = "3.2.1"
edition = "2021"
authors = ["Asko Nõmm <asko@asko.dev>"]
license = "MIT"
keywords = ["yaml", "frontmatter", "markdown", "orm", "database"]
categories = ["database", "filesystem"]

[dependencies]
regex = "1.10.0"
comrak = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde-frontmatter = "0.1.0"
thiserror = "1.0"